--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: rgb(54, 194, 54);
-    background-color: aqua;
+    color:#ff7300;
+    background: rgb(248, 248, 168);  
 }
 
+
 h2{
-    background-color: aquamarine;
+    /*background-color: white;*/
     border-bottom: 0px;
+    width: 100%;
+    text-align: center;
 }
